Fix z-index of video

--- a/app/assets/stylesheets/custom/welcome.css
+++ b/app/assets/stylesheets/custom/welcome.css
@@ -13,7 +13,7 @@
 
 #video {
   position: absolute;
-  z-index: 0;
+  z-index: -3;
   background-color: white;
 }
 
